--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-responsive": "^9.0.0",
+		"react-router": "^6.0.2",
+		"reactstrap": "^9.1.4"
 	}
 }
